--- a/index.html
+++ b/index.html
@@ -851,7 +851,9 @@
             <div class="about-container">
                 <div class="about-grid">
                     <div class="about-image">
-                        <div class="profile-placeholder">G</div>
+                        <div class="profile-placeholder">
+                          <img src="your-image.jpg" alt="Profile" />
+                            </div>
                         <h3 style="color: #6366f1; font-weight: 700; font-size: 1.4rem;">Gabriel</h3>
                         <p style="color: #64748b; font-size: 1.1rem;">Data Professional</p>
                     </div>
