--- a/index.html
+++ b/index.html
@@ -851,8 +851,8 @@
             <div class="about-container">
                 <div class="about-grid">
                     <div class="about-image">
-                        <div class="profile-placeholder">
-                          <img src="your-image.jpg" alt="Profile" />
+                        <div class="https://avatars.githubusercontent.com/u/3430744?s=400&u=21bd1b0688add9b25f9d0a0e4ec1bcfea1671149&v=4">
+                          <img src="" alt="Profile" />
                             </div>
                         <h3 style="color: #6366f1; font-weight: 700; font-size: 1.4rem;">Gabriel</h3>
                         <p style="color: #64748b; font-size: 1.1rem;">Data Professional</p>
