--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
             <div class="nav-left">
                 <div class="logo">DrivenB</div>
                 <div class="social-links">
-                    <a href="https://github.com/gabriel" class="social-link" title="GitHub" target="_blank">
+                    <a href="https://github.com/gabrielhribeiro/" class="social-link" title="GitHub" target="_blank">
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                         </svg>
@@ -840,7 +840,7 @@
             <div class="hero-content">
                 <h1>Turn Your Business Data into Smart Decisions</h1>
                 <p class="hero-subtitle">I'm Gabriel — A freelance data professional helping businesses unlock insights and value from data through proven methodologies and cutting-edge technologies.</p>
-                <a href="#contact" class="hero-cta">Book a Free Call</a>
+                <a href="https://calendly.com/gabrielrdavid/30min" class="hero-cta">Book a Free Call</a>
             </div>
         </div>
     </section>
@@ -1011,7 +1011,7 @@
     <section class="cta-section" id="contact">
         <div class="container">
             <h2>Your data journey starts here — schedule a call with an expert.</h2>
-            <a href="#" class="cta-button">Let's Get Started</a>
+            <a href="https://calendly.com/gabrielrdavid/30min" class="cta-button">Let's Get Started</a>
         </div>
     </section>
 
