--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                     </a>
                 </div>
             </div>
-            <a href="#contact" class="cta-header">Book a Free Call</a>
+            <a href="https://calendly.com/gabrielrdavid/30min" class="cta-header">Book a Free Call</a>
         </nav>
     </header>
 
