--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Gabriel, a freelance data professional, helps businesses unlock insights and value from data through proven data-driven processes.">
     
     <!-- Fonts -->
-    <link href="https://media.licdn.com/dms/image/v2/D4D03AQFR4-d9IaeVeQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1732555827647?e=1756944000&v=beta&t=NILqCUYh57_ofdXqS3gm6bFUFaVgXA6gnimQvktP8XU">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
     <style>
         * {
