--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                 <div class="about-grid">
                     <div class="about-image">
                         <div class="profile-placeholder">
-                          <img src="https://avatars.githubusercontent.com/u/3430744?s=400&u=21bd1b0688add9b25f9d0a0e4ec1bcfea1671149&v=4" alt="Profile" />
+                          <img src="https://media.licdn.com/dms/image/v2/D4D03AQFR4-d9IaeVeQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1732555827647?e=1756944000&v=beta&t=NILqCUYh57_ofdXqS3gm6bFUFaVgXA6gnimQvktP8XU" alt="Profile" />
                             </div>
                         <h3 style="color: #6366f1; font-weight: 700; font-size: 1.4rem;">Gabriel</h3>
                         <p style="color: #64748b; font-size: 1.1rem;">Data Professional</p>
