--- a/index.html
+++ b/index.html
@@ -779,6 +779,8 @@
 
             .hero {
                 padding: 0 20px;
+                padding-top: 60px; /* pushes hero content down so it's not hidden behind header */
+
             }
 
             .container {
